--- a/templates/franchise/index.html.twig
+++ b/templates/franchise/index.html.twig
@@ -29,40 +29,71 @@
           
         {# < Card section #}
         <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
-        <section class='container card-section my-5'>
-          <div class="row">
-            <div class='d-flex flex-column flex-md-row justify-content-md-between align-items-center mb-4'>
-              <div class='d-flex flex-column flex-lg-row'>
-                <h2 class="fw-bold lh-1 mb-0 mb-md-0 me-md-3 text-uppercase mb-2">MES CLUBS</h2>
-                <h2 class="fw-bold lh-1 mb-4 mb-sm-0 text-uppercase strokeme">TODAYFIT</h2>
+          <section class='container card-section my-5'>
+            <div class="row">
+              <div class='d-flex flex-column flex-md-row justify-content-md-between align-items-center mb-4'>
+                <div class='d-flex flex-column flex-lg-row'>
+                  <h2 class="fw-bold lh-1 mb-0 mb-md-0 me-md-3 text-uppercase mb-2">MES CLUBS</h2>
+                  <h2 class="fw-bold lh-1 mb-4 mb-sm-0 text-uppercase strokeme">TODAYFIT</h2>
+                </div>
+                <div class="d-flex flex-column flex-lg-row align-items-center">
+                  <form class="d-flex flex-row align-items-center gap-3">
+                    <div class="form-check form-switch ">
+                      <input class="form-check-input" type="checkbox" id="switchActive" />
+                      <label class="form-check-label" for="switchActive">Actives</label>
+                    </div>
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                    <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+                  </form>
+                </div>
               </div>
-              <div class="d-flex flex-column flex-lg-row align-items-center">
-                <form class="d-flex flex-row align-items-center gap-3">
-                  <div class="form-check form-switch ">
-                    <input class="form-check-input" type="checkbox" id="switchActive" />
-                    <label class="form-check-label" for="switchActive">Actives</label>
-                  </div>
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                  <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
-                </form>
-              </div>
-            </div>
-            {% set link = "/franchise/show/" %}
-            {% for franchise in franchises %}
-              {{ include('franchise/_card.html.twig', {
-                'button_label': 'Go!',
-                'id': franchise.id,
-                'email': franchise.email,
-                'name' : franchise.name,
-                'permissions' : franchise.permissions,
-                'image': franchise.image,
-                'description': franchise.description,
-                'link': link
-                }) }}
-            {% endfor %}
+              {% set link = "/franchise/show/" %}
+              {% for franchise in franchises %}
+                {{ include('franchise/_card.html.twig', {
+                  'button_label': 'Go!',
+                  'id': franchise.id,
+                  'email': franchise.email,
+                  'name' : franchise.name,
+                  'permissions' : franchise.permissions,
+                  'image': franchise.image,
+                  'description': franchise.description,
+                  'link': link
+                  }) }}
+              {% endfor %}
 
-          </div>
-        </section>
+            </div>
+          </section>
+
+          <nav class="d-flex justify-content-center">
+            <ul class="pagination">
+              {% if page != 1 %}
+              <li class="page-item">
+                <a class="page-link" 
+                  href={{ path('app_franchise_index', {page: page - 1,qty: qty}) }} 
+                >Previous</a>
+              </li>
+              {% endif %}
+              {% for i in range(1, qtyPages) %}
+                <li class="page-item">
+                  <a 
+                    class="{{ i == page ? "active page-link" : "page-link" }}"
+                    href={{ path('app_franchise_index', {page: i,qty: qty}) }}
+                  >
+                    {{ i }}
+                  </a>
+                </li>
+              {% endfor %}
+              {% if page != qtyPages %}
+                <li class="page-item">
+                  <a 
+                    class="page-link" 
+                    href="{{ path('app_franchise_index', {page: page + 1,qty: qty}) }}" 
+                  >Next</a>
+                </li>
+              {% endif %}
+            </ul>
+          </nav>
+
         </div>
         {# > Card section #}
 
